--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "backend"
   ],
   "author": "Ch Ammar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
+  }
 }
